--- a/package.json
+++ b/package.json
@@ -12,67 +12,76 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint test:*",
+    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "2.0.0",
-    "@ember/test-helpers": "2.6.0",
-    "@fullhuman/postcss-purgecss": "4.1.3",
-    "@glimmer/component": "1.1.2",
-    "@glimmer/tracking": "1.1.2",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "autoprefixer": "10.4.14",
-    "@babel/eslint-parser": "7.21.3",
-    "broccoli-asset-rev": "3.0.0",
-    "ember-a11y-refocus": "2.3.0",
-    "ember-auto-import": "1.12.2",
-    "ember-cli": "3.28.6",
-    "ember-cli-app-version": "4.0.0",
-    "ember-cli-babel": "7.26.11",
-    "ember-cli-dependency-checker": "3.3.1",
-    "ember-cli-htmlbars": "5.7.2",
-    "ember-cli-inject-live-reload": "2.1.0",
-    "ember-cli-postcss": "7.2.0",
-    "ember-cli-sri": "2.1.1",
-    "ember-cli-terser": "4.0.2",
-    "ember-data": "3.28.13",
-    "ember-export-application-global": "2.0.1",
-    "ember-fetch": "8.0.5",
-    "ember-load-initializers": "2.1.2",
-    "ember-maybe-import-regenerator": "0.1.6",
-    "ember-page-title": "6.2.2",
-    "ember-qunit": "5.1.5",
-    "ember-resolver": "8.0.3",
-    "ember-source": "3.28.11",
-    "ember-template-lint": "2.21.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-ember": "10.6.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.1",
-    "loader.js": "4.7.0",
-    "npm-run-all": "4.1.5",
-    "postcss-import": "14.1.0",
-    "prettier": "2.8.7",
-    "qunit": "2.19.4",
-    "qunit-dom": "1.6.0"
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@ember/optional-features": "^2.0.0",
+    "@ember/string": "^3.1.1",
+    "@ember/test-helpers": "^3.2.0",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
+    "autoprefixer": "^10.4.15",
+    "broccoli-asset-rev": "^3.0.0",
+    "concurrently": "^8.2.0",
+    "ember-a11y-refocus": "^3.0.2",
+    "ember-auto-import": "^2.6.3",
+    "ember-cli": "~5.2.1",
+    "ember-cli-app-version": "^6.0.1",
+    "ember-cli-babel": "^8.0.0",
+    "ember-cli-clean-css": "^2.0.0",
+    "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-htmlbars": "^6.3.0",
+    "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-terser": "^4.0.2",
+    "ember-data": "~5.2.0",
+    "ember-fetch": "^8.1.2",
+    "ember-load-initializers": "^2.1.2",
+    "ember-modifier": "^4.1.0",
+    "ember-page-title": "^8.0.0",
+    "ember-qunit": "^7.0.0",
+    "ember-resolver": "^11.0.1",
+    "ember-source": "~5.2.0",
+    "ember-template-lint": "^5.11.2",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-ember": "^11.10.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-qunit": "^8.0.0",
+    "loader.js": "^4.7.0",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.2",
+    "qunit": "^2.19.4",
+    "qunit-dom": "^2.0.0",
+    "rsvp": "^4.8.5",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.0.2",
+    "tracked-built-ins": "^3.1.1",
+    "webpack": "^5.88.2"
   },
   "engines": {
-    "node": "10.* || >= 12"
+    "node": "16.* || >= 18"
   },
   "ember": {
     "edition": "octane"
   },
   "dependencies": {
-    "ember-cli-netlify": "^0.4.1",
-    "tailwindcss": "2.1.4"
+    "ember-cli-netlify": "^0.4.1"
   }
 }
