--- a/package.json
+++ b/package.json
@@ -83,5 +83,314 @@
   },
   "dependencies": {
     "ember-cli-netlify": "^0.4.1"
+  },
+  "resolutions": {
+    "@babel/core": "7.22.15",
+    "@babel/plugin-proposal-decorators": "7.22.15",
+    "ember-auto-import": "2.6.3",
+    "ember-cli-babel": "8.0.0",
+    "ember-cli-htmlbars": "6.3.0",
+    "prettier": "3.0.3",
+    "rsvp": "4.8.5",
+    "@babel/code-frame": "7.22.13",
+    "@babel/generator": "7.22.15",
+    "@babel/helper-compilation-targets": "7.22.15",
+    "@babel/helper-module-transforms": "7.22.15",
+    "@babel/helpers": "7.22.15",
+    "@babel/parser": "7.22.16",
+    "@babel/template": "7.22.15",
+    "@babel/traverse": "7.22.15",
+    "@babel/types": "7.22.15",
+    "debug": "4.3.4",
+    "json5": "2.2.3",
+    "semver": "6.3.1",
+    "@babel/highlight": "7.22.13",
+    "chalk": "5.3.0",
+    "@babel/helper-validator-identifier": "7.22.15",
+    "ansi-styles": "4.3.0",
+    "escape-string-regexp": "5.0.0",
+    "supports-color": "8.1.1",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "has-flag": "4.0.0",
+    "jsesc": "2.5.2",
+    "@babel/compat-data": "7.22.9",
+    "@babel/helper-validator-option": "7.22.15",
+    "browserslist": "4.21.10",
+    "lru-cache": "7.18.3",
+    "caniuse-lite": "1.0.30001527",
+    "electron-to-chromium": "1.4.509",
+    "node-releases": "2.0.13",
+    "update-browserslist-db": "1.0.11",
+    "yallist": "4.0.0",
+    "@babel/helper-environment-visitor": "7.22.5",
+    "@babel/helper-module-imports": "7.22.15",
+    "@babel/helper-simple-access": "7.22.5",
+    "@babel/helper-split-export-declaration": "7.22.6",
+    "@babel/helper-function-name": "7.22.5",
+    "@babel/helper-hoist-variables": "7.22.5",
+    "globals": "13.21.0",
+    "safe-buffer": "5.1.2",
+    "ms": "2.1.3",
+    "eslint-visitor-keys": "3.4.3",
+    "eslint-scope": "7.2.2",
+    "estraverse": "5.2.0",
+    "@babel/helper-create-class-features-plugin": "7.22.15",
+    "@babel/helper-plugin-utils": "7.22.5",
+    "@babel/helper-replace-supers": "7.22.9",
+    "@babel/plugin-syntax-decorators": "7.22.10",
+    "@babel/helper-annotate-as-pure": "7.22.5",
+    "@babel/helper-member-expression-to-functions": "7.22.15",
+    "@babel/helper-optimise-call-expression": "7.22.5",
+    "@babel/helper-skip-transparent-expression-wrappers": "7.22.5",
+    "ember-cli-version-checker": "5.1.2",
+    "glob": "8.1.0",
+    "inquirer": "9.2.10",
+    "mkdirp": "1.0.4",
+    "resolve-package-path": "4.0.3",
+    "resolve": "1.22.4",
+    "is-core-module": "2.13.0",
+    "inherits": "2.0.4",
+    "minimatch": "7.4.6",
+    "brace-expansion": "2.0.1",
+    "balanced-match": "2.0.0",
+    "ansi-escapes": "4.3.2",
+    "cli-cursor": "3.1.0",
+    "cli-width": "4.1.0",
+    "figures": "5.0.0",
+    "mute-stream": "0.0.8",
+    "run-async": "3.0.0",
+    "rxjs": "7.8.1",
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.1",
+    "type-fest": "1.4.0",
+    "restore-cursor": "3.1.0",
+    "onetime": "6.0.0",
+    "signal-exit": "4.1.0",
+    "mimic-fn": "4.0.0",
+    "tmp": "0.2.1",
+    "tslib": "2.6.2",
+    "is-fullwidth-code-point": "3.0.0",
+    "ansi-regex": "5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/plugin-transform-modules-amd": "7.22.5",
+    "@babel/plugin-transform-typescript": "7.22.15",
+    "@babel/preset-env": "7.22.15",
+    "@babel/runtime": "7.22.15",
+    "babel-plugin-debug-macros": "0.3.4",
+    "babel-plugin-module-resolver": "5.0.0",
+    "broccoli-babel-transpiler": "8.0.0",
+    "broccoli-funnel": "3.0.8",
+    "broccoli-source": "3.0.1",
+    "clone": "2.1.2",
+    "fixturify-project": "2.1.1",
+    "rimraf": "3.0.2",
+    "source-map": "0.7.3",
+    "object.assign": "4.1.4",
+    "define-properties": "1.2.0",
+    "get-intrinsic": "1.2.1",
+    "babel-plugin-polyfill-corejs2": "0.4.5",
+    "babel-plugin-polyfill-corejs3": "0.8.3",
+    "babel-plugin-polyfill-regenerator": "0.5.2",
+    "@babel/helper-define-polyfill-provider": "0.4.2",
+    "lodash.debounce": "4.0.8",
+    "core-js-compat": "3.32.1",
+    "@babel/plugin-syntax-typescript": "7.22.5",
+    "regenerator-runtime": "0.14.0",
+    "@babel/plugin-bugfix-safari-id-destructuring-collision-in-function-expression": "7.22.15",
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "7.22.15",
+    "@babel/plugin-transform-arrow-functions": "7.22.5",
+    "@babel/plugin-transform-async-to-generator": "7.22.5",
+    "@babel/plugin-transform-block-scoped-functions": "7.22.5",
+    "@babel/plugin-transform-block-scoping": "7.22.15",
+    "@babel/plugin-transform-classes": "7.22.15",
+    "@babel/plugin-transform-computed-properties": "7.22.5",
+    "@babel/plugin-transform-destructuring": "7.22.15",
+    "@babel/plugin-transform-dotall-regex": "7.22.5",
+    "@babel/plugin-transform-duplicate-keys": "7.22.5",
+    "@babel/plugin-transform-exponentiation-operator": "7.22.5",
+    "@babel/plugin-transform-for-of": "7.22.15",
+    "@babel/plugin-transform-function-name": "7.22.5",
+    "@babel/plugin-transform-literals": "7.22.5",
+    "@babel/plugin-transform-member-expression-literals": "7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "7.22.15",
+    "@babel/plugin-transform-modules-systemjs": "7.22.11",
+    "@babel/plugin-transform-modules-umd": "7.22.5",
+    "@babel/plugin-transform-named-capturing-groups-regex": "7.22.5",
+    "@babel/plugin-transform-new-target": "7.22.5",
+    "@babel/plugin-transform-object-super": "7.22.5",
+    "@babel/plugin-transform-parameters": "7.22.15",
+    "@babel/plugin-transform-property-literals": "7.22.5",
+    "@babel/plugin-transform-regenerator": "7.22.10",
+    "@babel/plugin-transform-reserved-words": "7.22.5",
+    "@babel/plugin-transform-shorthand-properties": "7.22.5",
+    "@babel/plugin-transform-spread": "7.22.5",
+    "@babel/plugin-transform-sticky-regex": "7.22.5",
+    "@babel/plugin-transform-template-literals": "7.22.5",
+    "@babel/plugin-transform-typeof-symbol": "7.22.5",
+    "@babel/plugin-transform-unicode-escapes": "7.22.10",
+    "@babel/plugin-transform-unicode-regex": "7.22.5",
+    "@babel/preset-modules": "0.1.6-no-external-plugins",
+    "@babel/helper-remap-async-to-generator": "7.22.9",
+    "@babel/helper-wrap-function": "7.22.10",
+    "@babel/helper-create-regexp-features-plugin": "7.22.15",
+    "regexpu-core": "5.3.2",
+    "regenerate-unicode-properties": "10.1.0",
+    "regjsparser": "0.9.1",
+    "unicode-match-property-ecmascript": "2.0.0",
+    "unicode-match-property-value-ecmascript": "2.1.0",
+    "unicode-canonical-property-names-ecmascript": "2.0.0",
+    "unicode-property-aliases-ecmascript": "2.1.0",
+    "@babel/helper-builder-binary-assignment-operator-visitor": "7.22.15",
+    "regenerator-transform": "0.15.2",
+    "find-babel-config": "2.0.0",
+    "pkg-up": "3.1.0",
+    "reselect": "4.1.8",
+    "path-exists": "5.0.0",
+    "find-up": "6.3.0",
+    "locate-path": "7.2.0",
+    "p-locate": "6.0.0",
+    "p-limit": "4.0.0",
+    "p-try": "2.2.0",
+    "broccoli-merge-trees": "4.2.0",
+    "broccoli-persistent-filter": "3.1.3",
+    "workerpool": "6.1.4",
+    "broccoli-plugin": "4.0.7",
+    "promise-map-series": "0.3.0",
+    "sprintf-js": "1.1.2",
+    "async-disk-cache": "2.1.0",
+    "fs-tree-diff": "2.0.1",
+    "sync-disk-cache": "2.1.0",
+    "walk-sync": "3.0.0",
+    "istextorbinary": "2.6.0",
+    "editions": "2.3.1",
+    "async": "2.6.4",
+    "@types/minimatch": "3.0.5",
+    "matcher-collection": "2.0.1",
+    "broccoli-kitchen-sink-helpers": "0.3.1",
+    "tree-sync": "2.1.0",
+    "fixturify": "2.1.1",
+    "@types/fs-extra": "8.1.1",
+    "fs-extra": "11.1.1",
+    "@types/node": "15.12.2",
+    "graceful-fs": "4.2.11",
+    "jsonfile": "6.1.0",
+    "universalify": "2.0.0",
+    "babel-import-util": "2.0.0",
+    "yocto-queue": "1.0.0",
+    "broccoli-node-info": "2.2.0",
+    "commander": "9.5.0",
+    "postcss-selector-parser": "6.0.13",
+    "@glimmer/util": "0.84.3",
+    "ember-cli-typescript": "4.2.1",
+    "execa": "5.1.1",
+    "entities": "3.0.1",
+    "cross-spawn": "7.0.3",
+    "get-stream": "6.0.1",
+    "is-stream": "3.0.0",
+    "npm-run-path": "5.1.0",
+    "p-finally": "2.0.1",
+    "strip-final-newline": "3.0.0",
+    "path-key": "4.0.0",
+    "shebang-command": "2.0.0",
+    "which": "2.0.2",
+    "shebang-regex": "3.0.0",
+    "@glimmer/validator": "0.84.3",
+    "yargs-parser": "21.1.1",
+    "wrap-ansi": "7.0.0",
+    "babel-plugin-ember-template-compilation": "2.2.0",
+    "magic-string": "0.30.3",
+    "string.prototype.matchall": "4.0.9",
+    "isarray": "2.0.5",
+    "isobject": "3.0.1",
+    "es-abstract": "1.22.1",
+    "internal-slot": "1.0.5",
+    "regexp.prototype.flags": "1.5.0",
+    "is-callable": "1.2.7",
+    "is-negative-zero": "2.0.2",
+    "is-shared-array-buffer": "1.0.2",
+    "object-inspect": "1.12.3",
+    "string.prototype.trimend": "1.0.6",
+    "string.prototype.trimstart": "1.0.7",
+    "unbox-primitive": "1.0.2",
+    "has-bigints": "1.0.2",
+    "loader-utils": "2.0.4",
+    "schema-utils": "4.2.0",
+    "@types/json-schema": "7.0.12",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "json-schema-traverse": "1.0.0",
+    "@glimmer/syntax": "0.84.3",
+    "@glimmer/interfaces": "0.84.3",
+    "find-yarn-workspace-root": "2.0.0",
+    "inflection": "2.0.1",
+    "js-yaml": "4.1.0",
+    "p-defer": "3.0.0",
+    "sane": "5.0.1",
+    "uuid": "9.0.0",
+    "watch-detector": "1.0.2",
+    "finalhandler": "1.2.0",
+    "on-finished": "2.4.1",
+    "statuses": "2.0.1",
+    "is-glob": "4.0.3",
+    "micromatch": "4.0.5",
+    "braces": "3.0.2",
+    "picomatch": "2.3.1",
+    "fill-range": "7.0.1",
+    "to-regex-range": "5.0.1",
+    "is-number": "7.0.0",
+    "global-modules": "2.0.0",
+    "global-prefix": "3.0.0",
+    "http-errors": "2.0.0",
+    "depd": "2.0.0",
+    "setprototypeof": "1.2.0",
+    "anymatch": "3.1.3",
+    "fb-watchman": "2.0.2",
+    "normalize-path": "3.0.0",
+    "define-property": "2.0.2",
+    "extend-shallow": "3.0.2",
+    "kind-of": "6.0.3",
+    "is-extendable": "1.0.1",
+    "is-descriptor": "1.0.2",
+    "is-accessor-descriptor": "1.0.0",
+    "is-data-descriptor": "1.0.0",
+    "is-plain-object": "5.0.0",
+    "has-value": "1.0.0",
+    "has-values": "1.0.0",
+    "source-map-url": "0.4.1",
+    "readable-stream": "3.6.0",
+    "string_decoder": "1.3.0",
+    "broccoli-caching-writer": "3.0.3",
+    "bytes": "3.1.2",
+    "write-file-atomic": "5.0.1",
+    "ora": "5.4.1",
+    "log-symbols": "4.1.0",
+    "human-signals": "4.3.1",
+    "cookie": "0.5.0",
+    "raw-body": "2.5.1",
+    "is-unicode-supported": "1.3.0",
+    "argparse": "2.0.1",
+    "esprima": "4.0.1",
+    "colors": "1.4.0",
+    "hosted-git-info": "6.1.1",
+    "globby": "13.2.2",
+    "is-plain-obj": "2.1.0",
+    "fast-glob": "3.3.1",
+    "ignore": "5.2.4",
+    "slash": "4.0.0",
+    "@nodelib/fs.walk": "1.2.8",
+    "glob-parent": "6.0.2",
+    "is-docker": "3.0.0",
+    "terser": "5.19.4",
+    "broccoli-rollup": "5.0.0",
+    "rollup": "2.66.1",
+    "acorn": "8.10.0",
+    "@types/estree": "1.0.1",
+    "validate-peer-dependencies": "2.2.0",
+    "@glimmer/global-context": "0.84.3",
+    "@glimmer/reference": "0.84.3",
+    "resolve-from": "5.0.0",
+    "decamelize": "5.0.1",
+    "map-obj": "4.3.0"
   }
 }
