--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.21.3",
     "@ember/optional-features": "2.0.0",
     "@ember/test-helpers": "2.6.0",
     "@fullhuman/postcss-purgecss": "4.1.3",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "autoprefixer": "10.4.14",
-    "@babel/eslint-parser": "7.21.3",
+    "autoprefixer": "^10.4.16",
     "broccoli-asset-rev": "3.0.0",
     "ember-a11y-refocus": "2.3.0",
-    "ember-auto-import": "1.12.2",
+    "ember-auto-import": "~2.0.0",
     "ember-cli": "3.28.6",
     "ember-cli-app-version": "4.0.0",
     "ember-cli-babel": "7.26.11",
@@ -53,6 +53,7 @@
     "ember-resolver": "8.0.3",
     "ember-source": "3.28.11",
     "ember-template-lint": "2.21.0",
+    "ember-truth-helpers": "^4.0.3",
     "eslint": "7.32.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-ember": "10.6.1",
@@ -60,19 +61,22 @@
     "eslint-plugin-prettier": "3.4.1",
     "loader.js": "4.7.0",
     "npm-run-all": "4.1.5",
+    "postcss": "^8.4.30",
     "postcss-import": "14.1.0",
+    "postcss-loader": "^7.3.3",
     "prettier": "2.8.7",
     "qunit": "2.19.4",
-    "qunit-dom": "1.6.0"
+    "qunit-dom": "1.6.0",
+    "webpack": "5"
   },
   "engines": {
-    "node": "10.* || >= 12"
+    "node": "16.* || >= 18"
   },
   "ember": {
     "edition": "octane"
   },
   "dependencies": {
     "ember-cli-netlify": "^0.4.1",
-    "tailwindcss": "2.1.4"
+    "tailwindcss": "^3.3.3"
   }
 }
